style:fix:l word-wrap on ministery small devices

--- a/src/scss/components/_ministery.scss
+++ b/src/scss/components/_ministery.scss
@@ -1,8 +1,10 @@
 .ministery {
-  display: block;
   color: $c-grey--darker;
+  display: block;
+  margin-bottom: .9em;
   text-align: center;
-  margin-bottom: 0.9em;
+  word-wrap: break-word;
+
   &__name {
     color: $c-grey--darker;
     display: block;
